# klee-pspa

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/: install-llvm-and-runtime-compiler.sh  klee.sh
include/klee/: ASContext.h  AllocationRecord.h  ExecutionState.h  Interpreter.h
include/klee/Internal/Analysis/: AndersenSymbolic.h  Colours.h  DynamicAndersen.h  ModRefAnalysis.h  PTAGraph.h  (+6 more)
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  Colours.cpp  DynamicAndersen.cpp  Inliner.cpp  ModRefAnalysis.cpp  ModularAnalysis.cpp  PTAGraph.cpp  PTAStats.cpp  PTAUtils.cpp  Reachability.cpp  ReachabilityAnalysis.cpp  StateProjection.cpp  SymbolicPTA.cpp  SymbolicPTA.h
lib/Core/: AIPhase.cpp  AIPhase.h  ASContext.cpp  AbstractMO.cpp  AbstractMO.h  AddressSpace.cpp  AddressSpace.h  AllocationRecord.cpp  AttachedInfo.h  CMakeLists.txt  Context.cpp  Context.h  CoreStats.cpp  CoreStats.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExtendedSearcher.cpp  ExtendedSearcher.h  ExternalDispatcher.cpp  ExternalDispatcher.h  Memory.cpp  Memory.h  PTAInfo.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  TimingSolver.cpp  UserSearcher.cpp
lib/Expr/: CMakeLists.txt
lib/Module/: CMakeLists.txt  IntrinsicCleaner.cpp  KModule.cpp  LoopInfoCollector.cpp  ModuleUtil.cpp  Optimize.cpp  Passes.h  ReturnToVoidFunctionPass.cpp  UnusedValuesRemovalPass.cpp
runtime/POSIX/: fd.c  fd.h  fd_init.c  klee_init_env.c
test/Concrete/: BoolReadWrite.llvm37.ll  ConstantExpr.llvm37.ll  FloatingPointOps.llvm37.ll  GlobalInitializers.llvm37.ll  SimpleStoreAndLoad.llvm37.ll
test/Feature/: BitcastAlias.llvm37.ll  BitcastAlias.llvm38.ll  BitcastAliasMD2U.llvm37.ll  BitcastAliasMD2U.llvm38.ll  ConstantStruct.llvm37.ll  GetElementPtr.llvm37.ll  InsertExtractValue.llvm37.ll  Overflow.llvm37.ll  OverflowMul.llvm37.ll  Pts.c  SymPts.c
test/Intrinsics/: objectsize.llvm37.ll
test/Runtime/POSIX/: DirSeek.c
test/SymbolicPTA/: FunctionPts.c  Globals.c  MultiplePointers.c  Pts.c  SymPts.c
test/regression/: 2007-08-16-invalid-constant-value.llvm37.c
tools/klee/: CMakeLists.txt  main.cpp
tools/klee-stats/: klee-stats
tools/ktest-tool/: ktest-tool
tools/pta/: compare_stats.py  evaluate.py  gen_pta_stats.py  reuse_test.py  run.py  stats_parser.py  summarize_pta_stats.py
unittests/: CMakeLists.txt
unittests/SymbolicPTA/: CMakeLists.txt  OffsetFinderTest.cpp  SymbolicPTATest.cpp
(+2 files in other folders)
